--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                     <li><a href="#perso">personnalisation</a></li>
                 </ul>
             </nav>
+            <div id="burger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </header>
         <div id="row-one" class="section">
             <div class="cards">
